# lightcontrol

./: CMakeLists.txt  Readme.md
assets/: imgui.ini
grapher/: shutdownHumanEaseFormula.gcx
src/: LightControlApp.cpp
